paper_20pc/v3.46/BUILD_NOTES.md
# BUILD_NOTES — v3.42 (round 12: second referee round, phase 1)

Baseline: `technosignatures_20pc_v3.42.tex` as received = v3.41 content
(212,845 bytes, 3,858 lines, 36 pages). v3.41 and earlier folders untouched.

**This is phase 1: science, structure and content.** A later phase does the
de-AI language sweep (brief §3). Rulings executed:
`/shared/ASTRA/reviews/v3.42_DECISION_BRIEF.md`. Referee reports:
`v3.42_referee_A.md`, `v3.42_referee_B.md`.

---

## 1. Build gates

| gate | v3.41 | v3.42 |
|---|---|---|
| pages | 36 | **32** |
| main text / appendices | 25 / 11 | **23 / 9** |
| LaTeX errors | 0 | **0** |
| undefined refs / cites | 0 | **0** |
| multiply-defined labels | 0 | **0** |
| overfull boxes (hbox + vbox) | 1 (`\vbox`, 1.57 pt) | **0** |
| underfull boxes | 0 | **0** |
| Type 3 fonts | **3** (inherited) | **0** |
| appendices | 14 | **11** |
| `\includegraphics` calls | 11 | **9** |
| figure PDFs in the upload set | 24 | **9** |

Build = `pdflatex -interaction=nonstopmode` ×3. The `.bbl` is inline
(`thebibliography`); bibtex is not run. `./gate.sh` runs the build and prints
every gate above, the Type 3 enumeration, the main/appendix page split (read
from the `page:appstart` label in the `.aux`, not guessed from page text) and
the character budget. `./make_all.sh` regenerates every number, table fragment,
macro file and figure in dependency order.

**The page target was not met.** The brief asks for main ≤20 pp and appendices
≤7 pp; this round reaches 23 and 9. See §6.

---

## 2. The catalogue repair (brief §2.1, referee A1) — and what it moved

**HD 139084B is one system counted twice.** `HD 139084B 805632` and
`HD 139084B 921024` share execution block, spectral windows and on-source
times, and carry different system ids and distances (39.31 and 38.72 pc). They
follow exactly the naming pattern of the six component pairs already in the
de-duplication `PAIRS` list. The pair is now in `PAIRS` in **four** places that
each had their own copy — `survey_stats.py`, `survey_stats_round10.py`,
`make_figures_v328.py`, and (by `exec`) `make_tables_v328.py` — so

* **`\NSystems` 82 → 81**, and every per-system denominator follows it;
* the per-band table's "All" row and its caption, and the selection-function
  table's "searched stars / systems" row, follow automatically because both are
  now `\input` from generated fragments instead of being pasted into the `.tex`;
* `figures/coverage_waterfall.pdf` was regenerated and now plots 81 rows.

**The freeze guard in `round10_calc.py` is re-anchored in the same commit.** It
previously asserted the v3.39 values `OccMeasured` 6.2, `NOccSystems` 59,
`OccUnit` 3.6, `OccUniform` 8.6, `DutyHalf` 10.8 and aborted on any drift. Those
values were computed with HD 139084B double-counted. The guard now asserts
**6.3 / 58 / 3.7 / 8.8 / 11.0** and still aborts on drift away from them. The
old values are recorded in the guard's own comment so the change is auditable
rather than silent.

**`n_ant` is removed, not populated.** No retained product carries an antenna
count: it is absent from the frozen export, from every `*_result.json`, and
from the `*_srcspec.npz` products. Recovering it needs the raw measurement
sets, and only one survives on the processing host. An empty column that
promises data is worse than no column, so it is gone and the Data Availability
statement says why.

**Disposition strings now match Table 7 verbatim.** They are generated from one
dictionary keyed on (star, band), and — a defect caught during the rewrite —
are written only on the row that is actually the flagged window. A first cut
wrote them on every window of the flagged star/band, which would have released
15 "circumstellar CO" rows where there are 2.

**A second single-source violation found and fixed.** `make_numbers.py` read
the occurrence and duty quantities from two frozen side files
(`occurrence_v328.json`, `duty_v331.json`) while `round10_calc.py` computed the
*same* quantities live from `survey_stats_round10.json`. Two sources, one
quantity, and the frozen ones carried the pre-repair denominators. All of them
now come from the live engine; `round8_calc.py`'s `\EffFIccPct` likewise.

**A third, in the released catalogue.** `per_target_results_v3.32.csv` was
versioned v3.32 against a v3.41 manuscript. It is replaced by
`per_target_results_v3.42.csv`, generated by `v342_calc.py` from the frozen
export, 431 rows × 41 columns.

---

## 3. Control-ring geometry (brief §2.2, referees A2 and B-M3)

The geometry was never in the frozen products, only in the code. It is
deterministic, so `v342_calc.py` reconstructs it exactly rather than describing
it: `seti_extract_generic.py::probe_positions(pb_arcsec, seed=20260825)`, whose
offsets the caller adds to the star's own direction cosines
(`lam = l_star + dl`). Hence:

* the annulus is **concentric with the star**, not with the field phase centre;
* it is an **annulus**, 512 positions uniform in area
  (`r = sqrt(U(r_in², r_out²))`) and uniform in azimuth, seed `20260825`;
* radii `0.14–0.78 θ_PB` with `θ_PB = 1.22 λ / 12 m` at each window's own
  median frequency: θ_PB 12.7–69.5″, r_in 1.8–9.7″, r_out 9.9–54.2″;
* a separate inner check-ring reaches `0.06 θ_PB`.

**Two independent checks that this is the layout that actually ran**, because a
reconstruction is a claim and not a record:

1. the inner check-ring the reconstruction generates has exactly **135**
   positions, which is the `n_src` the retired region-max statistic maximised
   over — a number that appears in the manuscript and was never used to build
   the reconstruction;
2. in windows filled by extended CO the released control statistics **fall with
   the reconstructed radius**: Spearman ρ = −0.49 at p ≈ 7×10⁻³³ for the
   HD 48370 Band 6 window and ρ = −0.30 at p ≈ 7×10⁻¹² for its ¹³CO window,
   against a median ρ = **0.009** over the 304 windows containing no crossing.
   A wrong position-to-index mapping could not produce that.

Three claims in v3.41 were **wrong** and are corrected: the controls do not lie
"on a single ring of fixed angular radius"; they are not "evenly spaced in
azimuth (0.70 degrees apart)"; and the primary-beam argument's stated
assumption (ring concentric with the phase centre) is the opposite of what the
code does.

The exchangeability argument is restated in the form the brief specifies and
the one the code supports: the annulus samples primary-beam response 0.95 at
0.14 θ_PB down to 0.19 at 0.78 θ_PB (area-weighted mean 0.47), so star and
controls are **not** exchangeable in flux density, but the primary-beam
correction divides signal and noise by the same `G(r)`, so the ranked statistic
is invariant under it and **exchangeability holds in S/N**. A nuance neither
referee raised: the annulus is defined in units of the pipeline's own
`1.22 λ/D`, whereas ALMA's actual 12 m primary-beam FWHM is nearer `1.13 λ/D`,
so the *physical* response over the same radii is 0.94 → 0.14. Both are given.

By-product: the reconstruction **locates the HD 48370 ¹³CO peak**, which
referee B asked for. The control carrying that window's ring maximum sits
9.2″ (0.32 θ_PB) from the star, and the ten strongest controls all fall between
7.4″ and 11.1″ against a median control radius of 15.9″.

---

## 4. Line mask: repaired and re-applied (brief §2.3, referee A3, referee B minor)

The repaired catalogue holds **17 transitions of 11 species** at full JPL/CDMS
precision (was 15 of 9, stored rounded to 1 MHz), adding
**[C I] ³P₁–³P₀ at 492.160651 GHz** and **H30α at 231.900928 GHz**, and it is
applied in the **LSR frame** as well as the stellar frame. The worst rounding
error the frozen mask carried is 1.59 km s⁻¹ (HCO⁺(1−0)), not the 1.3 km s⁻¹
quoted in v3.41, which was the CO(1−0) value only. The eight-versus-nine
species discrepancy is reconciled in favour of the products: nine, the text was
wrong to say eight.

The mask is re-applied to the frozen crossing list as a post-hoc filter, not by
re-running the survey. Frame chains for the four flagged windows are computed
with astropy from the real EB coordinates and epochs (recovered from the
retained `*_srcspec.npz` products into `ebmeta_v342.json`); the barycentric
corrections reproduce the paper's own tabulated values to 0.07 and 0.01 km s⁻¹,
which validates the chain.

**No disposition changes**, and the paper says so explicitly:

| window | ν_cross (GHz) | stellar frame | LSR frame | disposition |
|---|---|---|---|---|
| β Pic B3 | 115.260644 | −2.8 km/s, masked | −1.0, masked | circumstellar CO |
| β Pic B6 | 230.516128 | −3.4, masked | −1.6, masked | circumstellar CO |
| HD 48370 B6 | 230.511674 | −17.8, masked | **−23.9, now also masked** | foreground CO |
| CP−72 2713 B7 | 344.269746 | −1323, not masked | −1300, not masked | unclassified |

The LSR result for HD 48370 is the one that moves: a Galactic foreground
feature is now caught in the frame its attribution always implied.

Across all 20 crossing windows the repaired catalogue moves the nearest
transition in exactly one case, HD 48370's Band 8 crossing at 491.949074 GHz,
whose nearest entry changes from CO(4−3) 20 098 km s⁻¹ away to [C I] at
−129 km s⁻¹. That is **still outside** the ±50 km s⁻¹ tube, so adding [C I]
does *not* dispose of that window, and the manuscript's previous claim that
"foreground [C I] is the obvious reading" is softened accordingly. It was never
a flag: its own control ensemble exceeds it.

The two new transitions cost a further 0.24 GHz of unique searched frequency
(0.3 per cent).

**Open item #2 from v3.41's BUILD_NOTES is closed, not fixed:** the two
mask-loss computations that "disagree by ~7×" are not in conflict. 0.64 GHz is
the loss over the 15 principal transitions; 4.96 GHz is the loss over all 276
JPL-catalogued transitions of the same species. Different denominators,
different quantities, both correct.

---

## 5. A defect neither referee raised

**The CP−72 2713 re-observation frequency in v3.41 was the window centre, not
the feature.** The manuscript twice named 345.1152 GHz — once as the frequency
of a targeted re-observation, once as the frequency at which atmospheric
structure was discussed. The crossing is at **344.269746 GHz**, 845 MHz lower.
Verified three ways: the frozen export's own `line_off` arithmetic; the
pipeline's recorded `star_peak_freq_GHz`; and the window's channel grid
(channel 35 of 3543, 17 MHz above the lower band edge). A re-observation
centred on the published number would have missed the feature.

The band-edge proximity is itself worth having: the manuscript's own §4.1 warns
that a global noise scale is least reliable near a bandpass edge. The local
recomputation there gives 0.97 for this window, so the excess is if anything
understated, and the disposition does not move.

`pipeline_peakfreq_v342.json` now carries the crossing frequency, channel,
drift and integration count for all 431 windows, harvested from the pipeline's
own `*_result.json`. It adds no new measurement: every `star_peak_snr` in it
reproduces the frozen export's value, all 431 matched (the three that initially
did not are the "γ Lupi" → HD 139664 relabelling of the paper's own item (iv),
which is a pleasing confirmation of that story).

---

## 6. Length: what was cut, and why the target was missed

Measured on the `.tex`, split at `\appendix` and at `\begin{thebibliography}`.

| region | v3.41 | v3.42 | net |
|---|---|---|---|
| main text + front matter | 148,763 | **143,380** | −5,383 |
| appendices | 60,364 | **42,175** | −18,189 |
| bibliography | 3,713 | 3,880 | +167 |
| **pages (main / appendix)** | **25 / 11** | **23 / 9** | **−2 / −2** |

**Out of the paper and into the repository**, per referees A17 and B-M5(b):
Appendix A (execution-block metadata), Appendix B (glossary table; its three
load-bearing rows moved into Table 1), Appendix L (integration-time audit),
most of the development audit (Appendix M, now a compact "Excluded entries, and
the retired statistic"), Table `tab:validation` (pre-freeze changes; the one
entry that moves a number is kept in prose), Table `tab:defects`,
Table `tab:trials`, Table `tab:smear`, Table `tab:supp`, Table `tab:orbital`,
Table `tab:funnel` (every row of which also appears in `tab:searchspace`),
Table `tab:exposure`, Table `tab:aumic`, Table `tab:maskband`.

**Two figures deleted.** `completeness_surface.pdf` duplicated the lower panel
of `completeness.pdf` from the same campaign. `pipeline_schematic.pdf` was
deleted for three reasons at once: it duplicated Table 2 (the statistical data
path), it carried ~12 hand-typed survey numbers outside the paper's own
single-source rule and could not be regenerated, and it was the sole source of
the 3 Type 3 fonts inherited since v3.39. Removing it takes the Type 3 count to
a genuine zero. **This is a judgement call and the author may want it back**;
if so it needs a generator that reads the macros.

**`coverage_waterfall.pdf` was regenerated**, not just rescaled: canvas
7.0 × 6.5 in instead of 7.0 × 8.5, system labels 5.2 pt instead of 4.2 pt, at
full text width. That answers referee B's "labels are very small" and recovers
most of a page, which the previous 0.70-width version was spending on white
space.

**Why 23 and not 20.** The main text is float-dense: 15 floats across 23 pages,
which is roughly 6 pages of tables and figures. After the deletions above,
further prose compression returned almost nothing — three successive rounds
removed ~4 kB of prose and moved the page count by zero, because the remaining
text reflows around fixed floats. Reaching 20 from here means deleting evidence
the referees asked for (the flagged-window table, the control-diagnostics
figure, the CP−72 control distribution, the β Pic frame-chain audit) or
weakening caveats, and the brief forbids the second. **The remaining pages
should come from phase 2**: the brief's own estimate is that killing widows and
shortening sentences is "worth real page fractions across a 27-page paper", and
431 em-dashes have not yet been touched.

---

## 7. Generator chain

`./make_all.sh` runs, in order:

```
survey_stats.py          -> survey_stats.json          (SRC now local, was an absolute path)
survey_stats_round10.py  -> survey_stats_round10.json  (+ n_multi, n_sys_total)
make_numbers.py          -> survey_numbers.tex         (occurrence/duty now from the live engine)
round8_calc.py           -> survey_numbers_round8.tex
round9_calc.py           -> survey_numbers_round9.tex
round10_calc.py          -> survey_numbers_round10/11.tex, tab_compcurve.tex, tab_occurrence.tex
v342_calc.py             -> survey_numbers_round12.tex, tab_ring.tex,
                            per_target_results_v3.42.csv, v342_stats.json
make_tables_v328.py      -> tab_selection.tex, tab_perband.tex
make_figures_v328.py     -> figures/*.pdf
```

`make_numbers.py` now runs as shipped: `duty_v331.json` and `aumic_v331.json`
were copied in from v3.31 and `survey_stats.py`'s absolute path is gone, so
v3.41 open item #3 ("cannot be run as shipped") is closed. `round5_calc.py`,
`round6_calc.py` and `round7_calc.py` do not exist anywhere in the repository;
their macro files are carried forward unchanged, and none of their quantities
depends on the system count (checked macro by macro). The three system-count
denominators that *were* theirs — `\CaseDetCoarse`, `\CaseDetFine`,
`\CaseDetDwell` — are now regenerated in `v342_calc.py` under an explicitly
stated definition that **reproduces the published 1 / 2 / 8 / 24 exactly** at
the old system count, so the definition is recovered rather than replaced, and
the values do not move at 81.

New macros this round (`survey_numbers_round12.tex`, 82 of them): ring geometry
(`\RingSeed \RingNProbe \RingNSrc \RingInFrac \RingOutFrac \RingCheckFrac
\RingGainIn \RingGainOut \RingGainMean \RingGainInTrue \RingGainOutTrue
\RingPbCoef \RingPbCoefCode \RingTheta* \RingRin* \RingRout* \RingRho*`),
the HD 48370 ¹³CO localisation (`\HdThirteen*`), the repaired mask
(`\MaskNTrans* \MaskNSpec* \MaskCIGHz \MaskHthirtyGHz \MaskVWidth
\MaskRoundWorstKms \MaskNewCoinc \MaskLost* \MaskExtra* \CIcross*`), Hanning
(`\HanBest \HanWorst \HanMed \HanFac*`), per-class sensitivity
(`\EirpMinA \EirpMaxA \EirpMedA \EirpHanMedA` and the B counterparts,
`\ChanLoA \ChanHiA \NWinA \ChanMedA` and B, `\PctCoarse \PctFine`),
η_drift (`\EtaAltOneNow \EtaBgeOneNow \AmaxMin \AmaxMax`), recomputed
denominators (`\CaseDet*Now \NSysInTwentyNow \NStarBelowAreciboNow`), the
asymmetric-statistic algebra (`\AsymExpectPct`) and catalogue shape
(`\NCatRows \NCatCols \PeakFreqMatched`).

Retired macros (their text is gone): `\NPlanned`, `\PctPlanned`,
`\NSysInTwenty`, `\OccBayes`, `\OccBayesPct`.

---

## 8. The local-null placeholder

Brief §2.5 asks for a 10⁴–10⁵-draw local null for the four flagged windows, and
notes that a separate run is computing it.
`/shared/ASTRA/reviews/v3.42_local_null.md` did not exist at any point during
this round. The manuscript therefore carries **one** placeholder macro,
`\LocalNullCP`, defined in `survey_numbers_localnull.tex`, which currently
expands to "that evaluation is not yet available, so the resolution floor
stands as stated." Phase 2 replaces that one macro with the measured
probability; nothing else in the manuscript needs to change.

The inputs exist: 592 `*_srcspec.npz` products are retained on the processing
host (`/data/SETI/targets/*/products/`), each carrying `I_star`
(n_int × n_chan), `W`, `times`, `freqs` and eight retained control spectra.

---

## 9. Open items for the authors

1. **The seven author markers are deliberately still in the source**: VBRL
   affiliation; the White (2026) EB-overlap statement and its exception clause;
   competing interests; the arXiv ID for White (2026); CRediT roles; the
   submission git tag. The Data Availability statement still depends on a tag
   that does not exist.
2. **`pipeline_schematic.pdf` is no longer used.** If the author wants a design
   figure back, it needs a generator that sources its numbers from the macros.
3. **Not recoverable from the frozen products, and still said so in print**:
   the running-median width `W`; the per-window Hanning/online-averaging state;
   the per-position noise records needed to test the coarse-noise defect; the
   per-correlation QA2 flagging needed to answer referee B-M7 with a number;
   per-window antenna counts; the synthesised beam.
4. **`\EffBandGHz` is defined twice** — `make_numbers.py` emits 87 and
   `round9_calc.py` `\renewcommand`s it to 88.2. It works, and the second wins,
   but it is a trap: delete the first.
5. The de-AI language sweep (brief §3) is untouched. 431 em-dashes, 98 ", not X"
   constructions.

---

# PHASE 3 — page trim (in progress; this section is written as work proceeds)

Entry state: 33 pp = 24 main + 9 appendix, 0 errors, 0 undefined, 0 multdef,
0 overfull, 0 underfull, 0 Type 3. Spaced ` -- ` count 12, all of which are
inside LaTeX comments (10) or CRediT role labels (2): none is prose, so the
dash sweep is complete. Em-dashes `---`: 0.

`./floatsize.sh` (new) measures every float's typeset height in points by
patching `\@largefloatcheck` in a scratch copy. One column is 694 pt.
Entry measurement: **main floats 4490 pt = 6.5 pp of 24; appendix floats
1881 pt = 2.7 pp of 9.** That is where the pages are.

## Float changes

| float | was | now | what changed |
|---|---|---|---|
| Fig. 1 `fig:context` | 517.6 pt | 282.2 pt | panels side by side instead of stacked |
| Fig. `fig:bpicvel` | 403.3 pt | **deleted** | plotted only numbers that Table 8 carries |
| Table 7 `tab:cp72props` | 231.6 pt | 125.7 pt | two quantity/value pairs per row; `$\dagger$` rows dropped |
| Fig. 8 `fig:completeness` | 596.8 pt | 343.6 pt | panel (a) removed (it plotted a withdrawn result) |

**Fig. 1.** `make_fig_context_v342.py` is a copy of `make_figures_referee_v331.py`
with the gridspec transposed to 1x2, the canvas 7.05x2.95 in, every font size
scaled x1.32 (the old file was drawn at 3.4 in and magnified x1.46 by
`width=0.70\columnwidth`; it is now placed 1:1 at `\columnwidth`) and four
annotations moved because the aspect change moved the empty regions. Same data,
same points, same literature values; `figures_referee_numbers.json` is
regenerated and unchanged in content.

**`fig:bpicvel` deleted — a judgement call, flagged for the author.** It plotted
the stellar-frame velocity offsets of the flagged windows against the
$\pm50$ km/s mask. Every number in it is in Table~\ref{tab:bpicaudit} (the frame
chain, all four rows) or Table~\ref{tab:cp72props} (CP-72 2713's line offset),
and the surrounding prose states the conclusion the figure draws. Neither
referee asks for it. It is also the one remaining figure with **no generator in
the release folder** (`bpic_velocity_space.pdf` was last generated by
`v3.26/make_figures.py`), so a reader cannot reproduce it from the shipped
source — the same objection that retired `pipeline_schematic.pdf` in phase 1.
Restoring it costs 403 pt = 0.58 pp.

**`fig:completeness` panel (a) removed.** It plotted the coarse "0 of 500
recovered" curve — a flat zero line with Wilson bars across 86 % of a page.
The appendix text *itself withdraws that result* as an artefact of the frozen
recovery criterion. The numbers (0/500, and the 68 %/95 % Wilson upper limits)
are still computed in `make_figures_v328.py` and emitted into its `notes`, and
the text carries the result and its withdrawal in full. The caption is rewritten
accordingly.

**A latent bug found and fixed in `make_figures_v328.py`:** the
constrained-layout `rect` is `(left, bottom, WIDTH, HEIGHT)`, not
`(left, bottom, right, top)`. The original call happened to be consistent
(`0.055 + 0.945 = 1.0`); intermediate edits here were not, and silently pushed
the axes off the canvas with no warning from matplotlib. Documented in a comment
at the call site.

## Prose compression (both referees: "condense substantially")

The manuscript was split into four disjoint regions (front matter through
methods; results; discussion and back matter; appendices) and each compressed
under one rule set: shorten and merge sentences, delete *restatements* of a
caveat already made, never delete the first statement of any caveat, never drop
a macro, number, reference, caption fact or author TODO comment. A checker
(`/tmp/trim/check.py`) compared each region against its original on the
multiset of `\label/\ref/\cite/\input` tokens, user macros and digit strings,
and on the forbidden constructions. Every region passed `OK`.

| region | before | after | delta |
|---|---|---|---|
| front matter, background, sample, methods | 62,061 | 59,571 | −4.0 % |
| results | 56,720 | 54,816 | −3.4 % |
| discussion, conclusions, back matter | 23,413 | 22,226 | −5.1 % |
| appendices | 38,126 | 36,881 | −3.3 % |

All four independently reported the same ceiling: this text is already terse,
and the parts that repeat are pinned because the repetition carries a number or
a macro. Their own estimate is that a further 10 %-plus is only available by
removing content, which is an author decision. One edit was reverted by hand
after review (the sentence distinguishing this pipeline from the White (2026)
pilot was cut as redundant; the novelty list two sentences later does in fact
cover it, so the cut stands).

## Second float pass

| float | was | now | what changed |
|---|---|---|---|
| Fig. 4 `fig:ctrldiag` | 447.7 pt | 248 pt | panels (c) and (d) dropped |
| Fig. 8 `fig:completeness` | 343.6 pt | 305 pt | placed at 0.88 rather than full width |
| Fig. 9 `fig:accel` | 363.2 pt | 300 pt | placed at 0.72 width, caption tightened |
| Fig. 5 `fig:cp72ctrl` | 256.4 pt | 230 pt | 0.64 → 0.56 width |
| Fig. 3 `fig:noiseqa` | 267.5 pt | 245 pt | 0.70 → 0.64 width |
| Fig. 7 `fig:sens2d` | 209.7 pt | 195 pt | 0.72 → 0.66 width |
| Table 1 `tab:nomenclature` | 351.1 pt | 341 pt | long rows tightened |
| Tables 10, 11, 12, 13 | | | captions tightened, no fact lost |

**`fig:ctrldiag` panels (c) and (d) dropped — flagged for the author.** They
plotted the per-window control maximum against achieved noise and against
on-source time. Neither panel is mentioned in the figure's caption or referred
to anywhere in the manuscript, in this version or in v3.41; the caption
describes only the box panels (a) and (b), which the text does use. Their octile
running medians are now emitted into the generator's `notes`, so the diagnostic
stays on the provenance record. Restoring them costs about 200 pt.

## Widow sweep

`widows.py` (new) reads the typeset PDF and reports every paragraph whose last
line is under a given fraction of the measure, worst first, with the opening
words so it can be found in the source. Paragraphs that end immediately before a
display equation are false positives and are skipped by hand. Nineteen
paragraphs were shortened by a few words each to reflow. The count under 17 % of
the measure went from 27 to 10.

## Phase 3 result, and the page budget honestly measured

| gate | phase 1 | **phase 3** |
|---|---|---|
| pages | 32 (33 once the local null went in) | **29** |
| LaTeX errors | 0 | **0** |
| undefined refs / cites | 0 | **0** |
| multiply-defined labels | 0 | **0** |
| overfull boxes | 0 | **0** |
| underfull boxes | 0 | **0** |
| Type 3 fonts | 0 | **0** |
| em-dashes `---` | 0 | **0** |
| spaced ` -- ` | 12 | **12**, all in comments (10) or CRediT labels (2); none in prose |
| `\includegraphics` | 9 | **8** |
| arXiv upload items | 23 | **26**, verified from an empty directory |

`./pagesplit.py` (new) measures the budget by region instead of counting whole
pages. The `page:appstart` label rounds to a page boundary, which charges the
main text for the back matter and charges the appendices for the bibliography:

```
main text (S1-Conclusions)   21.03 pages
back matter                   0.90 pages
appendices                    6.70 pages
bibliography                  0.33 pages
TOTAL                        28.96 pages
```

**The appendices are inside their budget: 6.70 pages against the 7 the brief
asks for.** The main text is 21.0 against the 20 asked for, one page over.
Total is 29 against about 27.

Main-text floats now stand at 3,441 pt, 4.96 pages of the 21. The remaining page
cannot be taken out of prose: four independent compression passes agreed the
text is at its lossless floor, and a whole page is 694 pt, which is three of the
figures. The ledger of what the last page would cost is in the run report and
is an author decision, not an editorial one.

## arXiv set

`./arxivset.sh [dir]` builds the upload set in an empty directory from the
manuscript's own `\input{}` and `\includegraphics{}`, runs `pdflatex` x3 and
prints every gate plus the missing-file count. Current: 26 items, 1.9 MB, 29
pages, all gates zero. `ARXIV_UPLOAD.md` is written from its output.

## Two defects fixed in passing

1. **"Bands 6 and 7 supply 83 per cent of the windows"** (Appendix E) was a
   hand-typed digit, and wrong: `tab:perband`, `\input` in the same appendix,
   gives 216+155 of 431 = **86** per cent. It is now `\PctBandsSixSeven`,
   emitted by `make_numbers.py` from `survey_stats.json`, so it cannot drift
   again. Found by the appendix compression pass.
2. **`make_figures_v328.py`'s constrained-layout `rect`** is
   `(left, bottom, WIDTH, HEIGHT)`, not `(left, bottom, right, top)`. The
   original call was accidentally consistent; edits here were not, and pushed
   axes off the canvas with no warning from matplotlib. Commented at the call
   site.

## New tools in this folder

| script | what it does |
|---|---|
| `floatsize.sh` | typeset height in points of every float, by patching `\@largefloatcheck` in a scratch copy. One column is 694 pt |
| `widows.py` | every paragraph in the PDF whose last line is under a given fraction of the measure, worst first, with its opening words |
| `pagesplit.py` | the page budget by region, from the typeset positions of the ACKNOWLEDGEMENTS, APPENDIX and REFERENCES headings |
| `arxivset.sh` | builds and gates the arXiv set in an empty directory |
| `make_fig_context_v342.py` | Figure 1 with its two panels side by side |

`gate.sh` now calls `pagesplit.py`. `make_all.sh` now calls
`make_fig_context_v342.py`, so the generator chain regenerates every figure the
manuscript uses; it was re-run end to end and the paper rebuilds unchanged.

## The last main-text page: what it consists of, and what removing it would cost

Main-text floats, measured (694 pt = one page):

| float | pt | % page | what it is | can it go? |
|---|---:|---:|---|---|
| Fig. 2 `fig:waterfall` | 475.8 | 68.6 | frequency coverage waterfall, 81 systems | **No.** Referee A18 wants it made the centrepiece; referee B asked for its labels to be *enlarged*, which is why it is this size |
| Table 1 `tab:nomenclature` | 341.4 | 49.2 | nomenclature, and the two senses of "probability" | **No.** Referee B's minor list asks specifically for the P(false flag) row |
| Table 5 `tab:searchspace` | 303.3 | 43.7 | the frequency/EIRP/drift domain searched | **No.** This is contribution 3 of the three the paper claims (A20) |
| Fig. 1 `fig:context` | 264.0 | 38.0 | literature context, EIRP vs distance and channel width vs frequency | Already halved this round. Removing it loses the only comparison with the cited surveys (A9) |
| Fig. 4 `fig:ctrldiag` | 249.1 | 35.9 | control-ensemble exchangeability by band and class | **No.** This is contribution 2, the spatial-control null calibration |
| Fig. 3 `fig:noiseqa` | 247.9 | 35.7 | the noise-defect exclusion, six windows in an empty gap | **No.** It is the evidence for excluding data |
| Table 4 `tab:dwell` + `tab:compcurve` | 238.1 | 34.3 | dwell campaign, and completeness against stacked amplitude | **No.** This is the answer to referee B's M4 split and to the 73 %-of-windows completeness gap |
| Fig. 5 `fig:cp72ctrl` | 227.1 | 32.7 | the CP-72 2713 statistic inside its own 512-control ensemble | Removing it costs the only picture of the survey's one unclassified feature against its own null |
| Fig. 7 `fig:sens2d` | 194.8 | 28.1 | EIRP threshold vs frequency, Class A and Class B separately | **No.** This is referee A8/A10's "give the two classes separately" |
| Table 6 `tab:flagged` | 169.3 | 24.4 | the four flagged windows and their dispositions | **No.** Referee-critical, authoritative table |
| Table 8 `tab:bpicaudit` | 162.4 | 23.4 | line-attribution frame chain, four rows | **No.** It is now the sole carrier of the velocity evidence |
| Table 9 `tab:bothstats` | 159.1 | 22.9 | AU Mic under both statistics | **No.** Referee B's M1(c) |
| Table 2 `tab:algorithm` | 155.6 | 22.4 | the statistical data path, step by step | **No.** It replaced the deleted pipeline schematic |
| Table 3 `tab:ring` | 126.9 | 18.3 | control-annulus geometry per band | **No.** Referee A2 and B-M3, the single most insistent methodological ask |
| Table 7 `tab:cp72props` | 125.7 | 18.1 | every quantity the products carry for CP-72 2713 | Already halved this round |
| **total** | **3,441** | **4.96 pp** | of 21.0 main-text pages | |

So the 21st page is not available from prose, and the three candidates whose
removal would buy it (`fig:context`, `fig:cp72ctrl`, `fig:sens2d`, 686 pt
together) are each evidence rather than bookkeeping. Recommend the author
decides; the alternative is to accept 21.

## One author item found this round

The Data Availability TODO comment instructs creating the git tag
`submitted-v3.32`, while the catalogue it names two paragraphs later is
`per_target_results_v3.42.csv`. The tag in the author-action note is stale.

---

## Revision log (v3.43 round 13)

New generator `v343_calc.py` -> `survey_numbers_round13.tex` (83 macros),
wired into `make_all.sh` after `v342_calc.py` (it reads the CSV that script
writes) and `\input` in the preamble. Every number the three reports showed
to be hand-typed or contradicted is now sourced from it.

**Step 1 (done, gates zero, 30 pp / main 20.98).** R1-M6, M7, M8.
- Smearing census S3.4 + App. A: three windows -> `\NSmearLo` = 9, with the
  five at 0.574-0.606 named and the generated `\SmearList` replacing the
  hand-typed triple. Added the one-clause justification of sinc(pi*Delta/2)
  the referee asked for (conservative against the min(1,1/Delta) occupancy
  reading, 0.64 vs 1.0 at Delta = 1).
- Primary beam S2(ii) + S3.3 + S5.3: median 1.0001 -> `\PbMedian` 1.00004,
  p90 1.012 -> `\PbPninety` 1.018, "none above 2 per cent" -> 41 above 2 and
  31 above 10 per cent, largest j1256-1257 B7 at 1.81 (0.46 theta_PB) named
  for the first time, Sirius B 3.6-18.6 per cent. Criterion (ii) now states
  the rule the code enforces (abort beyond 2 theta_PB) rather than one FWHM,
  and no longer attaches epsilon Eri's offset to Sirius B's correction. The
  1.22 lambda/D vs 1.13 lambda/D disclosure now covers the correction, not
  only the annulus.
- beta Pic S5.3.2: the retired asymmetric region-max 20.3 / 12.8 and the
  add-one p < 0.0044 are gone. Operative symmetric T_star = 14.65 (B3) and
  11.68 (B6), 5 control maxima at or above each, add-one p = 0.014 on a
  denominator of 432. The claim that 15.2 is "the largest here" is corrected:
  it is the 5th largest, and the paper's own 26.83 and 20.37 are quoted.
- Deleted the standardised excess zeta (R3-8): introduced as a yardstick and
  decided nothing.

**Step 2 (done).** R3-4 arithmetic + R3-3 vocabulary.
- 66.6 GHz -> `\UnionBandsFourEight` = 72.5 GHz, recomputed as the interval
  union over Bands 4-8 (the Band 3 union is 20.6, and 93.1 - 20.6 = 72.5).
  Range 125--495 -> 142--495 GHz, also generated.
- Fig. 2 caption 7.6x -> `\GrossOverUnion` = 7.7, = 716.7/93.1.
- "Eighteen" -> `\NExoHosts`.
- `\EffBandGHz` retired from both `make_numbers.py` (87) and
  `round9_calc.py` (renewed to 88.2); its three uses now take
  `\SearchedUnionGHz`, the single source.
- `\NSbr`/`\RateSbr`/`\NSbrOld`/`\RateSbrOld` renamed to `\NRankFirst`... and
  Appendix J now states both pairs with their gate: rank-first 65/431 -> 5/431
  ungated, stage-1 flags 7 -> 4 gated (new macro `\NSpatialOld`).
- Arecibo: the Conclusions clause now reads "toward 1 of the 81 systems", and
  the S5.3 benchmark sentence carries the same count. The two figure captions
  label a reference line and are left.

**Step 3 (done).** R1-M1, settled from the version folder alone, no cluster
access. `v342_local_null.json` states the statistic as "max over channels and
drift trials of the inverse-variance-weighted, de-drifted stack" using
"*_search.npz for the all-probe robust noise map sigma[t,c]", and
`localnull_code/local_null.py` implements it (Z = I/sigma, u = 1/sigma,
X = Z*u, num = sum_t X_t(shifted), den = sum_t invvar, snr = num/sqrt(den)),
with `method/validation` recording that the reimplementation reproduces the
published `star_peak_snr` bit-for-bit for all four flagged windows. Eq. (2)
rewritten as the weighted stack; sigma redefined as the across-position MAD
per integration and channel; Table 3 steps 4, 6 and 7 corrected. The three
dependent arguments reworked: the local-vs-global paragraph now says what is
actually true (no stellar-position variance enters sigma) and carries R2-M5's
bandpass-residual scaling; the breakdown-point argument now counts positions,
not channels; the beam-filling mechanism (R1-M4) is restated as the
short-baseline argument, with the 13CO offset case as its counter-example.

**Step 4 (done).** R1-M5/M9/M10/M11/M12 and R2-M1/M4.
- Baseline filter: "running median" -> block median with linear interpolation
  everywhere (S4.1 prose, Table 3 step 4, S5 summary, Appendix A). Appendix A's
  "W cannot be printed" is withdrawn: W = 65 channels above 130 usable channels
  and n/2 below, 65-74 over the fine class and 30-59 over the coarse, ceilings
  ~32 MHz at 488 kHz and ~0.9 GHz at 15.62 MHz, all generated from
  `pipeline_peakfreq_v342.json` matched to the catalogue on (EB, window edges).
- Trials accounting stated once and in cells: 177-6,866,208 cells per window
  (median 468), 4.60e7 survey-wide, Gaussian expectation 13.2 cells, observed
  229 on-star >=5 sigma cells in 20 windows from the products' own `nhit`, of
  which 174 belong to the four flags. The residual 55 cells against 13.2 is the
  auditable comparison. The "1.1e5 effective trials per window" claim is gone.
- Hanning: `archive_meta_v343.json` (in this folder) gives the archive's
  effective spectral resolution per window; the ratio to the MS channel
  separation is exactly 2.00 in 403 of 431 windows, including 309 of the 313
  coarse TDM ones. The "metadata not yet harvested" sentence is withdrawn.
- CP-72 2713 subsection rewritten and compressed (~1200 -> ~950 words, with
  three referee asks added). Wrong -195 km/s H13CN claim deleted; the query at
  the corrected 344.269746 GHz returns 3 catalogued transitions inside the
  +/-50 km/s tube in both frames (`linecat_v343.json`); SO 8(8)-7(7) stated as
  absent from the mask and as what would have masked the feature; disposition
  moved onto the excitation argument (E_u 87/89 K against CO(3-2) and CO(2-1)
  non-detections at the same position); the general rule stated; and the
  19-of-20 result recorded, which is why catalogue proximity cannot disposition.
  Added: edge-proximity coincidence with R2's 3.2 per cent and the trim that
  actually ran (4 per cent, so channel 35 is ~92 MHz inside the baseband edge);
  the scramble null's blindness to frequency-stationary artefacts and the
  absence of the other two instrumental discriminants; Gumbel p = 4.4e-3
  (factor 3.6, reproduced here from `localnull_code/ctrlmax.json`); the ring
  maximum's own local-null p = 3.0e-3, 1.9 times the star's.
- Main text is now 21.68 pp. Length pass next.

**Step 5 (done).** Length and prose.
- Cuts taken, all from duplicated content, never a first statement of a
  caveat: Table 1 trimmed 15 rows -> 7 (crosswalk, QA2, f_dwell, p_epoch,
  archive-complete, control ring removed, each defined at first use instead);
  S6.3 merged into S6.4 as one ranked list of five; the "archive-complete is
  not volume-complete" restatements in S1, S5.3 and S6.2; the rank-floor and
  local-null restatements in S5.3; S5.3(iv)'s "Worked through" recap; the
  "three levels stay distinct" restatement; S5.3(v)'s first two sentences; the
  pseudo-star two-caveat paragraph and its N_eff restatement; the symmetric
  region-max sub-subsection; S5.2's four-way argument reduced to two plus
  direction; the polarisation paragraph; S5.5's integration-time audit; the
  Conclusions' restatement of the future-work list; Appendix I's
  withdrawn-statistic stratification (its closing observation promoted to
  S5.3, per R3 minor 8); Appendix H's detection list; the CP-72 and beta Pic
  prose duplicates of their own tables.
- Additions paid for: R3-1 declarative opener in the Conclusions, R3-6
  Hanning-corrected medians in the abstract's own clause, R3 minor 1
  (115 GHz reconciled with the 50 GHz statement through Wright et al.'s axis),
  R3 minor 3 (scope item (iii) "only weakly constraining"), R3 minor 4 (the
  crossing ledger stated once; the stale "six" removed), R1 m1 (Table 9's nu
  column defined as the window centre), R1 m4 (drift ceiling is
  12.0-13.3 Hz/s/GHz and |a| = 3.60-4.00, not uniform), R1 m5 (the "53 of 107"
  arithmetic that did not reconcile is withdrawn rather than guessed at).
- Prose: 19 "X, not Y" antitheses converted to declaratives; 5 italic
  paragraph lead-ins deleted; 5 numeral-openers varied; S1 and S2 no longer
  both open "Six decades"; zero em-dashes throughout.
- Floats: `fig:waterfall` reduced 0.90 -> 0.80\textwidth with its label
  fonts enlarged by the same factor in `make_figures_v328.py`, so rendered
  label size is unchanged (R1 m11's condition). Its top-panel title was
  overflowing the axes at the larger font and is now shortened and set at
  6.6 pt. `fig:context`, `fig:cp72ctrl` and `fig:sens2d` untouched.

**Final state (v3.43, referee round 13).** 29 pages. Main text 20.95, back
matter 0.91, appendices 6.78, bibliography 0.33, total 28.98 against the
v3.42 baseline's 21.03 / 0.90 / 6.70 / 0.33 = 28.96. Gates: 0 errors,
0 undefined refs/cites, 0 multiply-defined labels, 0 overfull, 0 underfull,
0 Type 3 fonts, 0 em-dashes. `arxivset.sh` builds from an empty directory:
27 items (19 tex/cls/sty + 8 figures), 1.9 MB, 0 missing files, 29 pages,
0 Type 3. `make_all.sh` runs the whole generator chain clean in 11 s.
`ARXIV_UPLOAD.md` updated for the new `survey_numbers_round13.tex`.
Response letter: `REFEREE_RESPONSE_CYCLE1.md`.

**Incident, disclosed.** A `v343_calc.py` already existed in this folder from
an earlier data-gathering step (it had written `tab_smear.tex` at 20:26 UTC)
and was overwritten by this run's Write before being read. The outputs of that
step survive and are used here: `tab_smear.tex`, `linecat_v343.json` and
`archive_meta_v343.json`. Regeneration of `tab_smear.tex` has been folded into
the current `v343_calc.py`, so it is reproducible again; the Splatalogue and
obscore queries behind the two JSON files cannot be re-run offline and those
files are treated as frozen inputs. `tab_smear.tex` is released but not
`\input` by the manuscript, which carries the census as the generated
`\SmearList` macro instead, because a table costs more page than it buys.

**pagesplit.py made robust.** Its heading finder used `re.fullmatch` on whole
text blocks; after the length pass the "APPENDIX A. ..." and "ACKNOWLEDGEMENTS
..." headings merge with following text into one block and the script crashed
with a TypeError. Changed to prefix matching, which reads the same heading y
position. Not a document defect.

**Corrected final state.** After restoring two things this pass had cut too
far (the CP-72 2713 margin/Fig. 5 bootstrap evidence, which is not in Table 7,
and the R2-M6 array/beam limitation, which a referee asked to have stated),
and paying for them at float level: **29 pages, main 20.98, back matter 0.92,
appendices 6.76, bibliography 0.33, total 28.99** against the v3.42 baseline's
21.03 / 0.90 / 6.70 / 0.33 = 28.96. Float widths reduced, each with its own
label fonts enlarged by the same factor in `make_figures_v328.py` so rendered
legibility is unchanged: `coverage_waterfall` 0.90 -> 0.72\textwidth,
`noise_qa` 0.64 -> 0.56\columnwidth, `completeness` 0.88 -> 0.78,
`drift_acceleration` 0.72 -> 0.62. `fig:context`, `fig:cp72ctrl` and
`fig:sens2d` untouched. All gates zero; arXiv set rebuilds from empty at
29 pages, 0 missing files, 0 Type 3.

---

# Revision log (v3.44, referee cycle 2)

Baseline seeded from v3.43: 29 pages, main 20.98, back matter 0.92,
appendices 6.76, bibliography 0.33; all gates zero. Reports:
`/shared/ASTRA/reviews/v3.44_referee{1_radio,2_radiostars,3_general}.md`;
priority findings `CYCLE2_PRIORITY_ARCHIVE_FINDINGS.md`; rules
`STANDING_RULES.md`. Snapshot of the incoming `.tex` kept as
`.baseline_v344.tex` for the word-diff, and `.baseline_v344.pdf`.

## Step 0 (done). Tooling, and independent verification before any edit

New in this folder:

* `macrosweep.py` -- collects every `\newcommand` in `survey_numbers*.tex`
  and reports which are referenced by neither the manuscript nor any
  `\input` fragment. On the incoming file it reproduces referee 3's count
  exactly: **31 of the 129 round-13 macros unused** (603 defined across all
  ten macro files, 167 unused overall; the other 136 are legacy spares from
  rounds 5-12).
* `worddiff.py` -- token-level `difflib` diff of two `.tex` files, reporting
  deletions, insertions and the net separately for main text, appendices and
  whole file. Referee 3 showed the previous cycle's reply overstated its
  compression, so this cycle measures before and after with one script used
  on both sides.
* `v344_calc.py` -> `survey_numbers_round14.tex` (63 macros), wired into
  `make_all.sh` after `v343_calc.py` and `\input` in the preamble.

**Every referee number was recomputed here before being used.** Results:

| claim | source | reproduced |
|---|---|---|
| 448 public progenitor EBs, 102 searched, 346 not (22.8 %) | `archive_meta_v343.json` | yes |
| 75 of 102 member OUSs hold more than one; 304 windows (70.5 %), 62 stars | same + catalogue | yes (macro prints 71 %) |
| 62 of 88 stars have more blocks available than searched; max 34 available against at most 3 searched | same | yes |
| 18 of 81 systems have a single available block, 63 have two or more | same | yes |
| CP$-$72 2713 MOUS `uid://A001/X2d20/X2e25`: 2 progenitors, `X502d` unsearched, 49.5 GB against 49.3 GB searched | same | yes |
| R1-N3: 10.9 expected on-star crossing windows against 20 observed, 16 excluding flags, factor 1.5, Poisson p = 0.09 | catalogue | yes (10.92; 0.0884) |
| R1-N3: the whole trials budget is fine-class, 4.58e7 of 4.60e7 cells, expectation 10.9 fine against 0.03 coarse; all 20 crossings are fine | catalogue | yes |
| R1-N3: 1.2 cells per crossing expected, 3.4 observed, ratio 2.8; 1.5 x 2.8 = the 4.2 already printed | catalogue + `pipeline_peakfreq_v342.json` | yes |
| R1-N3: 125 of 431 windows have a control above 5 sigma against 133.9 expected; control maxima track the iid prediction at median ratio 0.995 (5th-95th 0.91-1.12), fine 5.77 against 5.71, coarse 4.41 against 4.47 | catalogue | yes. The prediction convention that reproduces the referee is the **median** of the maximum of N iid standard normals, Phi^-1(0.5^(1/N)), not Phi^-1(1-1/N), which gives 1.009 |
| R1-N4: the first block-median node is at channel **32.7**, not 65; the crossing at channel 35 is **2.3** channels from it | code rule `nb = max(2, n//65)` on n = 3533 | yes (nb = 54, W = 65.43, node 32.71) |
| R2-N2: belt 140 au = 3.81 arcsec at 36.72 pc; inside the flagged window's annulus (2.55-14.21 arcsec = 94-522 au); B7 beam 0.61 arcsec (47x12 m), B6 beam 5.71 arcsec (9x7 m) | `archive_meta_v343.json` + catalogue | yes |
| R2-N2: CO(2-1) < 84 mJy km/s, M_CO < 1.6e19 kg at 20 K and 2.4e19 at 50 K (2.7-4.0e-6 M_Earth); CO(3-2) < 8.2 mJy km/s | shipped `rms_mJy`, 3 sigma matched-width over dV = 4 km/s, optically thin LTE | yes, to the printed precision |
| R2-N1: the Lovas entry U-344288.4 has `eu: 0.0`, `chem: UNIDENTIFIED` | `linecat_v343.json` | yes. The excitation argument disposes of **two** entries, not three |

Two referee numbers I did **not** reproduce, both trivial and both in the
referees' favour on the substance:

* R1 says six member OUSs hold ten or more progenitor blocks; I count
  **seven** (11, 12, 23, 24, 25, 26, 34). Six hold eleven or more.
* R1 and R2 quote the flagged window as 3534 and 3533 channels respectively.
  Rounding `(f_hi - f_lo)/chanw` gives **3533**; truncating gives 3534. The
  node arithmetic is insensitive to the difference (node 32.71 either way).

One thing I could not verify at all: the provenance of the Lovas U-line.
Splatalogue is not reachable from this container and the shipped
`linecat_v343.json` carries no source field, so R2-N1's preferred repair
(name the astronomical source the U-entry was reported toward) is not
available. Handled by the referee's own stated fallback.

## Step 1 (done). Tier-1 and Tier-2 content, before the length pass

New generator `v344_calc.py` -> `survey_numbers_round14.tex` (91 macros),
`\input` in the preamble after round 13. New frozen input
`cp72_checks_v344.json` (see below).

Tier 1, all three items:
* **S3** carries the epoch-scope statement with `\NMous`, `\NProgenitorEB`,
  `\PctEbSearched`, `\NUnsearchedEB`, `\NMousMulti`, `\NWinMultiEB`,
  `\PctWinMultiEB`, `\NStarMoreEB`, `\MaxProgEBStar`, `\MaxSearchedEBStar`,
  and names both causes (the per-target block budget, the spectral-window
  de-duplication across blocks). The abstract's first use of
  "ALMA-archive-complete" now reads "complete in targets and tunings, though
  not in epochs".
* **S5.4** "observed in one to three execution blocks" -> "*searched* in one
  to three", with the count of stars holding further public blocks; the same
  correction in Appendix J, where $n_i$ is now "searched in $n_i$" and the
  archived multiplicity is given beside it.
* **S6.2** "no EB-level selection lies behind the 102" is **withdrawn**. It
  now states that an EB-level selection does lie behind them, with the
  datalink count and the cause. The bare "107 unique ... all but one" claim
  is gone.
* **CP-72 2713** no longer says no recurrence test is available. It names the
  member OUS, the unsearched block, both sizes, and states that the promote
  test needs no new telescope time.

Tier 2: Appendix H's trials paragraph replaced by the two-factor
decomposition plus the control calibration (R1-N3); the baseline node
corrected to channel `\BaseNodeFirst` with the crossing `\CpNodeDistChan`
channels beyond it (R1-N4); the CO argument moved onto the belt geometry
with the ACA CO(2-1) limit and mass (R2-N2); the excitation argument
restricted to the `\NCpTubeIdent` identified entries with the U-line treated
as a coincidence and a width argument added that disposes of all three plus
a background emitter (R2-N1, R2-M8); `\UnionBandThree` and
`\UnionBandThreeFrac` replacing hand-typed twins (R3-E); the Conclusions'
one-sentence result reworded to "raising a $5\sigma$ trigger at powers of"
(R3-B); the $N_{\rm eff}$ clause in S4.1 (R3-F); S5.5's third "ancillary
result in full" corrected, its `\ref` unhooked from the continuum lane and
the 300 MHz claim scoped to the mask (R2-N5); Fig. 2 repaired (R1-N6).

**Fig. 2.** Three defects, all in `make_figures_v328.py`. The legend's
`$<$5\,MHz` passed a literal backslash through to matplotlib and is now
`($<5$ MHz channels)`. The 81 row labels collided at 0.72\textwidth; every
row keeps its label, but alternate rows are now set on a secondary
right-hand axis, which doubles the vertical space each label has at no cost
in figure size. Row labels are set as the text sets the same objects
(`alf CMa B` -> $\alpha$ CMa B, `bet Pic` -> $\beta$ Pic, `chi01 Ori` ->
$\chi^1$ Ori, `gam Lep` -> $\gamma$ Lep, `Barnards star` -> Barnard's Star),
through a `_GREEK` table applied after `_TIDY`. Verified by rendering the
built page at 200 dpi and reading the figure's own text layer.

**`cp72_checks_v344.json`, disclosed.** Four measurements on the retained
CP-72 2713 dynamic spectrum (variance ratio, the local null run on the
star's own residual, the split-half, the per-integration continuum) close
R1-M2, R1-N5, R2-M3 and R2-N4 with numbers. The `*_srcspec.npz` products are
**not in this release folder**, so this run could not re-derive them; they
are carried from the cycle-1 verification log (run `e4cac251`,
`/data/SETI/work/v343_checks/checks.json`) and recorded as a frozen input
with that provenance in the file's own `_doc` field, rather than hand-typed
into the manuscript. Stated again in REFEREE_RESPONSE_CYCLE2.md.

Also done: R1-m2 (six catalogue entries, five designations), R1-m3 (the
`\NDistinctDatasets` = 396 forward pointer), R1-m4 (the compounded
$\times\CompoundWorst$ worst case), R1-N7 (both ACA consequences, measured:
ACA annuli at 0.08-0.46 of the true beam with median gain 0.75 against 0.47,
and 36/5 of the >2 per cent corrections 12 m/7 m), R2-M4 residual
(`\NPeakOuterThree` of `\NPeakRows`), R2-M6 residual (the HD 48370
$^{13}$CO offsets in beams: 1.7, and 1.3-2.0 for the ten strongest),
R2-N4 (the stellar-emission paragraph at the head of the disposition
discussion), R2 minors 1, 2, 3 and 8.

After step 1: 31 pages, main **21.74**, appendices **7.08**. Gates zero.
The length pass is step 2.

## Step 2 (done). Length, measured

Incoming: 29 pp, main 20.98, back matter 0.92, appendices 6.76, bib 0.33,
total 28.99. After step 1 the paper was 31 pp and main 21.74, so step 2 had
to find about 1.1 pages. Cuts taken, in order, each rebuilt and measured:

| cut | source | effect |
|---|---|---|
| `fig:noiseqa` deleted (Fig. 3, 222 pt) | R1 length item 1 | the two numbers it plots are in S5.2 and the referee verified both without it; the figure moves to the release |
| `tab:ring` deleted (127 pt) | R1 length item 2 | per-window annulus geometry is six columns of the released catalogue; the load-bearing statement stays in S4.1 |
| Table 1: `candidate` and `Class A / Class B` rows | R1 length item 6 | both terms are defined at first use in the text |
| Hanning restatement in S4 and in the Conclusions | R1 length item 4 | the boxed rule is on the same page as the first and cross-referenced two lines from the second |
| S6.2's transfer-systematic restatement | R2 length plan | kept in the abstract, the boxed rule, S4.4 and Appendix J |
| four rank-floor restatements | R2 length plan | kept in the abstract, Table 1, S4.1, the statistical statement and the CP-72 subsection |
| S5.2's duplicate-row closing sentences | R2 length plan | both repeated in Appendix I |
| S6.2 haystack bandwidth and sensitivity clauses | R2 length plan | Table 5 carries them |
| S6.4's "strengths and mirrors" preamble | R3 length plan | restated S4 and the scope box; replaced by a sixth ranked item, searching the blocks already held |
| S4.2 re-derivation of the channel-dilution algebra | R3 length plan | Appendix A carries it in full |
| S4.1's first of two sigma statements | R3 minor 2 | the second develops it |
| S5.3 components (ii), (iii), (v) and the closing robustness paragraph | R3 length plan | (i) and (ii) arrived at the expected-flag count twice |
| Appendix D's prose | R3 minor 8 | restated Data Availability |
| 13 antithesis conversions | R3-C | plain statements, 3-6 words each |
| Appendices A, C, H, I, J tightened | this run | the H additions of step 1 paid for in place |

**Result: 29 pages, main 20.82, back matter 0.91, appendices 6.94,
bibliography 0.31, total 28.98**, against the incoming 28.99. The main text
is 0.16 pages below where it started and the appendices 0.18 above, and the
page count is unchanged, so the paper did not grow. It does **not** reach the
author's 20.0 main-text target; see the closing note.

**Not taken:** R1's length item 3, merging the two boxed rules (~120 pt).
Both boxes are on referee 2's must-not-cut list in full, they sit in
different sections doing different jobs (how to read a number; what the
non-detection binds), and the merge is a structural edit of protected text
that the page budget did not require. Reported rather than done.

**Two defects fixed in passing.** The bibliography filed `Dent et al. (2014)`
after `Matra et al. (2017)` and `Pickett et al. (1998)` after
`Vidal et al. (2026)`; both are now in place. `make_fig_context_v342.py:499`
emitted a spaced double hyphen inside Fig. 1's annotation (R3 minor 3), now
a comma; verified in the figure's own text layer.

**Em-dashes.** Zero in the source. The built PDF's text layer contains
**seven**, one per figure caption: they are `openjournal.cls`'s own
`Fig. n.---` separator, and the count fell from eight only because Fig. 3 was
deleted. Referees 1 and 3 both warn against "fixing" these. Do not.

## Step 3 (done). Unused-macro sweep, closed to zero

`macrosweep.py` on the incoming file: 129 round-13 macros, **31 unused**,
matching referee 3 exactly; 603 macros over all ten generated files, 167
unused. Actions:

* the six archive-audit macros and 17 others are now used in the text;
* 14 round-13 spares are **retired at source** in `v343_calc.py`
  (`AcaBeamRatio`, `CellsObsMedian`, `EdgeStarMin`, `NEbTwelveM`,
  `NWinBeamKnown`, `NeffMedSevenM`, `PbMaxPct` and the seven
  `SmearEta`/`SmearPen` spares, the census travelling as `\SmearList`);
* the duplicate `\EdgeChanCp` I had added in round 14 is retired in favour of
  the round-13 `\EdgeChanMin`, which was one of the orphans;
* the remaining **138 legacy spares** from rounds 5 to 12 are removed by a
  new last step in `make_all.sh`, `retire_macros.py`, which deletes from the
  generated files every `\newcommand` that no `.tex` in the folder
  references, records what it removed as a comment in each file, and refuses
  to touch a referenced one. The generators still compute the quantities, so
  re-enabling one means deleting a name from the tool's report.

Verified: `macrosweep.py` now reports **541 macros defined, 0 unused**, and
the built PDF's text layer is **byte-identical** before and after the
retirement (167,260 characters both ways), so nothing the reader sees moved.

## Step 4 (done). The two missing figure generators, and the final state

Referee 3's minor 5: `cp72_control_distribution.pdf` (Fig. 4 now) and
`sensitivity_2d.pdf` (Fig. 5) shipped with no script in the folder, the exact
condition that retired `pipeline_schematic.pdf` in v3.42.
`make_fig_missing_v344.py` now rebuilds both from shipped products, at the
shipped canvas sizes (302.4 x 216.0 pt and 504.0 x 244.8 pt), with
`pdf.fonttype = 42` so they can never contribute a Type 3 font:

* Fig. 4 from `localnull_code/ctrlmax.json` (the window's 512 control
  statistics) plus the catalogue for `T_star` and the ring maximum. The
  generator asserts that the catalogue's `ctrl_max_snr` equals the maximum of
  the 512 stored values before plotting.
* Fig. 5 from the catalogue alone: all 431 windows, class split, the three
  grey band-median lines the caption names (computed from the catalogue, not
  drawn by hand) and the Arecibo line.

Both were verified against the figures they replace by rendering old and new
at 170 dpi and comparing: identical bar heights and marked values in Fig. 4,
identical point distribution, colours (`#1f77b4` open circles, 0.55 grey
dots), markers and labels in Fig. 5. Wired into `make_all.sh` before
`retire_macros.py`.

### Final state (v3.44, referee cycle 2)

29 pages. **Main 20.74, back matter 0.96, appendices 6.94, bibliography 0.31,
total 28.95**, against the incoming 20.98 / 0.92 / 6.76 / 0.33 = 28.99.
Gates: 0 errors, 0 undefined refs/cites, 0 multiply-defined labels, 0
overfull, 0 underfull, 0 Type 3 fonts, 0 em-dashes in the source (7 in the
PDF, all the class's caption separator). `macrosweep.py`: 541 macros defined,
**0 unused**. `arxivset.sh` builds from an empty directory: 26 items
(19 tex/cls/sty + 7 figures), 1.6 MB, 29 pages, 0 missing files, 0 Type 3.
`make_all.sh` runs the whole chain clean.

**Measured word-diff against the incoming file, one script both sides**
(`worddiff.py`): main +350, appendices +235, whole **+585** tokens; the
rendered PDF text is **+470** tokens. The paper gained about 500 words and
the letter says so. The page was bought from `fig:noiseqa` and `tab:ring`,
349 pt of floats, both priced and proposed by referee 1.

Response letter: `REFEREE_RESPONSE_CYCLE2.md`. Not pushed, per the brief.

**Left for the next round**: referee 2's M10 (three beta Pic specifics),
minor 4 (Table 9's hand-typed values), minor 5 (chi1 Ori variability and the
LSR J1835+3259 flux in the main text), minor 6 (Band 8 [C I] limits, which
are computable from the shipped `rms_mJy` and worth having), minor 7
(promoting the tuned-line rule out of Appendix E); referee 1's m1 (W = 65-73
against 65-74), m3's co-observed-annulus check and m7's four catalogue
columns; referee 3's minor 10 (the hand-typed continuum counts, which need a
continuum product in the folder). The second CP-72 2713 execution block, and
the length it would buy, are the separate job's.

**One error of my own, caught on the final read.** The new CP-72 2713 ring
sentence said belt CO(3-2) would raise controls "as HD 48370's 13CO ring does
at 26.8". 26.8 is that star's **CO(2-1)** ring maximum; its 13CO ring is
`\HdThirteenRingMax` = 20.4, which is the value referee 2 quoted. Corrected,
and now macro-sourced rather than typed.

---
---

# BUILD_NOTES — v3.45 (referee cycle 3: final revision + anti-AI prose pass)

Baseline: `technosignatures_20pc_v3.45.tex` as received = v3.44 content
(188,303 bytes, 3,334 lines). Snapshot kept as `.snap_00_incoming.tex`.
Reports: `/shared/ASTRA/reviews/v3.45_referee{1_radio,2_radiostars,3_general}.md`.
Rules: `/shared/ASTRA/reviews/STANDING_RULES.md`.

## 0. Incoming measurements (all re-measured here, not taken from the reports)

| gate | value |
|---|---|
| pages | 29 |
| main / back matter / appendices / bib | 20.78 / 0.96 / 6.94 / 0.31 |
| errors, undefined, multdef, overfull, underfull, Type 3 | 0 / 0 / 0 / 0 / 0 / 0 |
| macros defined / unused | 553 / **3** (`\CpRecEb`, `\CpRecGB`, `\CpRecCtrlMax`) |
| rendered abstract | **2,682 characters**, 435 words (arXiv limit 1,920) |

Prose counts from `prosecount.py` (my own script, so before/after are
comparable with each other but not with referee 3's absolute numbers):

| construction | main | app | total |
|---|---:|---:|---:|
| ", not" | 47 | 12 | 59 |
| "and not" | 12 | 1 | 13 |
| "rather than" | 14 | 3 | 17 |
| colon-explainer | 144 | 36 | 180 |
| paragraph-initial italic/bold label | 50 | 18 | 68 |
| numeral list-opener | 13 | 3 | 16 |
| em-dash | 0 | 0 | 0 |
| negative-definition sentence | 2 | 0 | 2 |

## 1. Tier 2 verification: the recurrence test, re-derived from the products

`cp72_verify.py`, run read-only on the processing host against
`/data/SETI/targets/CP-72_2713_{B7,EB2}/products/*_srcspec.npz` and
`*_search.npz`. It reimplements the release statistic (4 per cent adaptive
edge trim, 65-channel frequency-median baseline, inverse-variance weighted
de-drifted stack) from the star's own retained raw spectrum plus the retained
per-channel `sigma`.

**Gate first.** At the published channel (35) and drift (-2055.5 Hz/s) the
reimplementation returns T* = 5.808912411 against the published
5.80891227722168: relative error **2.3e-8**. The reimplementation is the
pipeline to eight significant figures, so its second-epoch values can be used
directly. (Referee 2 reached 1.2 per cent with an independent reimplementation
that did not use the retained `sigma`; that is why their numbers differ from
mine in the third digit.)

| referee claim | my measurement | verdict |
|---|---|---|
| matched frequency AND drift: -0.9 +/- 1.8 mJy, -0.5 sigma | **-1.04 +/- 1.83 mJy, -0.57 sigma** | confirmed, my values used |
| first epoch 12.2 mJy | **11.34 +/- 1.95 mJy** (12.2 = T* x median rms; the fitted flux at that channel is 11.34) | corrected |
| persistent emitter excluded at ~7 sigma | **6.78 sigma** conditioning on epoch 1's fitted flux; **4.63 sigma** treating both epochs as measurements of one amplitude | confirmed with the distinction made explicit |
| epoch 2 is 6.3 per cent deeper | rms 1.9640 vs 2.0970 mJy = **6.34 per cent lower**; at the feature channel 1.826 vs 1.951 = 6.42 per cent | confirmed |
| persistent same-flux emitter would have given T* = 6.20 | **6.21** (11.336 / 1.826, both channel-local) | confirmed |
| frequency axes agree to 87.6 kHz = 0.18 channel | **-87.635 kHz = -0.1795 channel** | confirmed |
| +0.6 sigma against the ten neighbouring channels | mean 3.226, sd 0.629, star 3.604 -> **+0.60 sigma** | confirmed |
| window maximum 4.698 ranks 188th of 513 | **188 of 513**, add-one p = 0.366 | confirmed |
| `\CpRecCtrlMax` = 5.93 exceeds the 5.81 that raised the flag | **5.93297** | confirmed |
| both epochs the same night, ~1-2 h apart | **2022-10-02 00:40:03-01:42:28 and 02:42:49-03:44:45 UT**; gap 60.3 min, start to start 2.05 h | confirmed |
| zero drift, epoch 1, only 2.10 sigma | **2.02 sigma** (3.95 +/- 1.95 mJy) | confirmed, my value used |
| drift grids differ, 129 vs 128 trials | nearest epoch-2 node is 16.33 Hz/s away = 0.124 channel over the span; at that node epoch 2 gives -1.03 mJy, -0.56 sigma, i.e. immaterial | confirmed |
| other three windows of epoch 2 clean | 2.646 / 2.982 / 4.470, 0 hits, detection false | confirmed |

Derived and used: the track sweeps |d| x span = **7.70 MHz = 15.77 channels**;
implied acceleration c nu-dot / nu = **1.79 m/s^2**. The drift-maximised
comparison that the v3.44 text rests on is worth only **1.56 sigma**
((5.809 - 3.604)/sqrt2), which is why it had to be replaced.

Output: `cp72_recurrence_v345.json` (fetched from the host), consumed by
`recurrence_calc.py`.

## 2. Progress log

**2.1 Generators and release products (Tier 1 item 3, Tier 3 items 13, 14).**
`recurrence_calc.py` rewritten to consume `cp72_recurrence_v345.json` and emit
44 macros covering the matched-drift measurement, the depth, the registration
of the two frequency axes, the epoch times, the like-for-like comparisons and
the block's other three windows. `\CpRecEb` and `\CpRecGB` deleted at source
(they duplicated `\CpEbUnsearched` and `\CpEbUnsearchedGB`, the double-definition
trap closed in v3.42); `\CpRecNChan` deleted in favour of `\CpNChan`, which
closes referee 3's N9 formatting inconsistency. `recurrence_calc.py` added to
`make_all.sh` between `v344_calc.py` and `localnull_calc.py`.
`v342_calc.py`: the CP-72 2713 disposition string becomes "unattributed;
retired on second-epoch non-recurrence", and a `released_name()` repair
restores the stripped signs in four designations (LSR J1835+3259,
PM J03433+1958, WD 0407-179 and BD+05 1668, the last found here and not in the
reports, all four confirmed against the row's own distance) and collapses runs
of whitespace. 431 rows, 0 double-space names.

**2.2 Retirement propagated (Tier 1 item 1).** Abstract; Sec. 3 scope
paragraph; Sec. 5.3 opener; Table 4 cascade row; Table 5 disposition cell;
Sec. 5.3 record sentence, rewritten so the subsection states the disposition
reached; Sec. 6.3 future-work item 1; Conclusions; the released catalogue.

**2.3 Abstract (Tier 1 item 2).** Rewritten. **2,682 -> 1,865 rendered
characters** (`abschars.py`, line breaks collapsed), 55 characters of headroom
against arXiv's 1,920. Kept: sample and scale, the control construction, the
null, the four flags with dispositions including the retirement, the
1/513 floor against the Bonferroni scale, the trigger-level framing, the
Class A/B ranges, the 73 per cent figure, the Hanning and transfer caveats,
the archive-complete-but-not-in-epochs qualification, and the honesty clause
verbatim. Dropped: the Hanning peak-channel fractions, the class medians and
corrected medians, the native channel widths, two of the three local-null
p-values, and the F/G/M numerical factors.

**2.4 CP-72 subsection.** Restructured so the test comes first and the
disposition argument follows as supporting detail. Prose 1,391 -> 1,212 words at this checkpoint; trimmed further in the prose pass below.
`tab:cp72props` replaced by referee 3's two-epoch comparison: 125.7 -> 122.3 pt
measured (the row count fell but the three-column header costs more than the
two-column one did, so the saving is 3 pt and not the 66 pt costed).

Running page split after these: main **20.67**, back matter 0.95,
appendices 6.94, bibliography 0.31.

## 3. Final state (v3.45, referee cycle 3)

**29 pages. Main 20.45, back matter 1.07, appendices 6.93, bibliography 0.31,
content total 28.76.** Gates: 0 errors, 0 undefined references/citations, 0
multiply-defined labels, 0 overfull boxes, 0 underfull boxes, 0 Type 3 fonts,
0 em-dashes in the source. `macrosweep.py`: **535 defined, 0 unused**.
`arxivset.sh` from an empty directory: **27 items** (20 tex/cls/sty + 7
figures), 1.5 MB, 29 pages, 0 missing files, 0 Type 3.

Rendered abstract **1,835 characters** (arXiv limit 1,920). Measured a second
way, with every macro expanded and maths left in LaTeX form, **1,908** -- also
inside the limit, which matters because an author pasting the abstract into
arXiv's form usually pastes the maths as LaTeX.

Word-diff against the incoming file, one script both sides: main 1,905 deleted
/ 1,754 inserted / **net -151 tokens**; appendices -6; whole -157.

### Clean-regeneration test, and what it found

Deleted all 13 macro files, the 6 table fragments, the 12 figure PDFs, both
stats JSONs and the catalogue, then ran `make_all.sh` and rebuilt.

1. **Referee 3's N5 reproduces exactly.** Without `recurrence_calc.py` in the
   chain, `survey_numbers_recurrence.tex` is absent and the build dies at
   `\input` with `File not found`. Fixed.
2. **A second instance, unreported.** `survey_numbers_round{5,6,7}.tex` have
   **no generator anywhere in the release**; the rounds 5-7 scripts were never
   shipped. A clean regeneration therefore destroyed them. They are now held in
   `frozen_macros/` and restored by `make_all.sh` as its first step. This also
   means `retire_macros.py` is destructive on those three files: it strips
   unreferenced `\newcommand` lines from frozen inputs that cannot be rebuilt.
   The `frozen_macros/` copies are the pre-retirement originals, so the cycle
   is now idempotent, but a future round that wants a retired round-5/6/7 macro
   back must take it from `frozen_macros/`, not from a generator.
3. After both fixes the chain runs clean and the rebuilt paper is byte-stable
   at 29 pages with every gate at zero.

### Other defects found here rather than in the reports

- **A broken cross-reference in the false-alarm ledger.** Component (iv) cited
  "the Bonferroni reference of (v)", and (v) made no Bonferroni statement. The
  reference is removed. Merging (v) into (vi) on referee 3's plan also
  reconciles the ledger with its own opening sentence, which says the
  false-alarm probability has *five* components while six were labelled.
- **A fourth stripped designation in the released catalogue.** The reports
  named three; `BD05  1668` is a fourth, and is BD+05 1668, Luyten's Star, at
  the 3.79 pc the row itself carries.
- **`ARXIV_UPLOAD.md` was not stale in the way the reports say.** All three
  report "26 items" and a missing `survey_numbers_recurrence.tex`; the copy in
  this folder says 27 and lists it. Recorded as not confirmed. What was stale:
  the title, the 1.9 MB size (1.5 MB measured) and a "27 -> 26" bullet that
  contradicted the header.
- **The width argument was lost and restored.** The second CP-72 trim dropped
  the one-channel-against-Keplerian-belt comparison, which is the first
  statement disposing of an extragalactic emitter (referee 2's M8, accepted in
  an earlier round). Caught by `retire_macros.py` reporting `\CpTwoChanwkHz`
  and `\CpTwoDv` as newly unreferenced; restored in compressed form with
  referee 2's "in the de-drifted plane" qualifier. The unused-macro sweep is
  worth running for this reason and not only for hygiene.
- **The survey-wide edge-proximity context was lost and restored** the same
  way: `\NPeakOuterThree` of `\NPeakRows` peak channels in the outer 3 per
  cent, which is referee 2's own M4 fix and argues *against* the paper's
  coincidence.
- **Environment.** One `pdflatex` run died with `Illegal instruction (core
  dumped)` while the container root filesystem was at 100 per cent (21 MB
  free); it reran clean after `/tmp` was cleared. `/workspace` is at 98 per
  cent, 6.0 GB free. Worth watching before the next round.

### Length: the honest ledger

Main 20.78 -> **20.45** against a 20.00 target. Referee 3's plan reaches 19.8
by costing the consistency edits at +120 words and the new measurements at +60;
referees 1 and 2 between them asked for about twelve lines of new measurement
in the same subsection, roughly +250 words, which referee 3's figure does not
include. Referee 1's own estimate with those additions in view was 20.55 and
the sentence "I cannot find the remaining ~384 pt without deleting evidence a
referee asked for"; referee 2's was 20.5, or 20.35 with Table 6 released, which
has now been done.

The two remaining blocks of the right size, both left to the authors:
`fig:cp72ctrl` at 227.1 pt (0.33 pp), which the standing instruction forbids
cutting, and `tab:algorithm` at 155.6 pt (0.22 pp), the twelve-step
reproduction summary no referee proposed removing.

### Floats, after

`tab:cp72props` deleted (125.7 pt), on referee 1's item 1 and referee 2's
withdrawal of its protection. Its content lives in the prose and, better, in
`fig:cp72ctrl`, which now plots **both epochs** at the same canvas size: the
two 512-position control ensembles overplotted (they coincide, which is the
free evidence that the datasets are comparable), both control maxima, and both
values of `T_star`. Second-epoch control statistics come from that block's own
retained `ctrl_max` array, copied to `localnull_code/ctrlmax_eb2.json` with its
provenance inside the file; the generator asserts its maximum against the value
the text prints.

### Author items, still open and still flagged in the source

Data Availability TODO naming tag `submitted-v3.32`; the VBRL affiliation
wording; the White (2026) arXiv identifier; the repository tag and the Zenodo
DOI. None is the assistant's to resolve.

Response letter: `REFEREE_RESPONSE_CYCLE3.md`. **Not pushed, per the brief.**

# BUILD_NOTES — v3.46 PROSE SWEEP (de-AI + length trim)

Task: language and length only. No number, claim, caveat or citation changes.
Journalled continuously because two earlier v3.46 attempts died to platform faults.

## 0. Incoming measurement (2026-09-12, measured here, not taken from the brief)

    gate.sh      : 30 pages | errors 0 | undef 0 | multdef 0 | overfull 0 | underfull 0 | Type3 0
    pagesplit.py : main 20.78  back 1.08  appendices 6.94  bib 0.34  = 29.14 content pages
    abstract     : 1907 / 1920 rendered characters (13 spare)
    prosecount   : A ", not" 27/12  "and not" 5/1  "rather than" 13/3  -> A total main 45, app 16, 61
                   B colon-explainer 114/35   C para-initial label 41/18
                   D numeral list-opener 2/3  E em-dash 0/0  F negative definition 1/0
    widows.py 0.25: 30 paragraphs with a last line under 25 per cent of the measure

Target: 29 printed pages, main <= 20.45. That is 0.33 page = ~229 pt of column to find
in prose. Snapshot of the incoming file: `.snap_prose_start.tex` (+ `.pdf`).

## 1. Progress log

### 2026-09-12, pass 1 (intro, background, sample, method, statistic)
Antithesis retirement by structural recast (not renaming): the three-gaps sentence,
the archive-complete framing, the Fig.~1 merit warning, the parallax-cut pair, the
paired-rows clause, the exchangeability pair (flux vs S/N), the median-across-positions
clause, the drift-margin sentence. Aphoristic closers removed: "price the search, and do
not forbid it", "the molecular line forest confuses", "a statement with edges", "the
estimator is safe; the data are not audited", "Very short-period systems are the
ceiling's sacrificial edge", "That is why a line filling the primary beam...".
Expanded per referee B: the three detectable morphologies (fragment list -> three
sentences). Acronyms spelled at first use: QA2, SEFD, MOUS, TDM.
One-line stub paragraph "The output vocabulary nests strictly" merged into the
preceding paragraph.
Build after pass 1: 30 pp, all gates 0, main 20.88 (prose expansion, to be repaid),
abstract 1907.

### pass 2 (results, false-alarm, flags, CP-72, mask) — compression begins
Aphorisms retired: "It rests on the gap", "Two repeats need not agree", "The
attribution is no dismissal", "The ensemble calibrates the rank...", "Repairing a mask
is cheap; re-running the survey is not", "One qualification travels with the result
wherever it is stated", "The first-epoch feature is not stationary", "Nothing about it
was tuned", "One stratum departs, and is reported, not pooled away", "Read these numbers
with two distinctions in mind". Navigation meta trimmed in the Results opener.
Build: main 20.88 -> 20.82, all gates 0. Main chars 147056 (in) -> 147424.
Remaining to find: ~257 pt = ~48 typeset lines.

### pass 3 — widow sweep round 1 (24 targeted trims)
Each trim removes one to four words from a paragraph whose last typeset line carried
one or two words. main 20.79 -> 20.67 pp; total 29.19 -> 29.06. All gates 0.
Antithesis after pass 2 (prosecount): main A total 45 -> 18 (", not" 27->11, "and not"
5->1, "rather than" 13->6); colon-explainer main 114 -> 80.

### pass 4 — widow sweep round 2 (14 trims): **29 PAGES REACHED**
gate.sh: 29 pages | 0 errors | 0 undef | 0 multdef | 0 overfull | 0 underfull | 0 Type3
pagesplit: main 20.55  back 1.06  appendices 6.99  bib 0.31  = 28.90 content pages
Abstract untouched so far at 1907/1920. Main still 0.10 pp above the 20.45 target;
continuing with caption trims and the appendix antithesis sweep.
Cuts of substance in this round: the "each has its mirror in the scope box" pointer,
"and the numbers here", "and is the reproducibility reference for steps 1-3",
"The evidence for both consolidates in Appendix I" (all pure pointers, no content).

### pass 5 — widow sweep round 3 (18 trims): **MAIN 20.43 <= 20.45 TARGET MET**
29 pages | all gates 0 | main 20.43 | back 1.07 | appendices 6.95 | bib 0.31 | total 28.76.
28 printed pages would need a further ~0.76 pp (about 100 typeset lines) and is not
reachable without deleting protected evidence; 29 stands.
Next: appendix antithesis sweep, paragraph-opening variation, final gates.

### pass 6 — appendix antithesis sweep, paragraph-opening variation, two expansions
Appendix: ten antithesis constructions recast (A total app 16 -> 6, "rather than" 3 -> 0).
Paragraph openings: twelve consecutive-"The" chains broken ("Placing controls off-centre
costs sensitivity", "How long a carrier occupies one native channel defines the searched
class", "Masking is a design selection effect", "Two limits attach to these numbers",
"Four defects in the mask as executed...", "Table 7 audits every window...").
Two genuine expansions for referee B's comment 8, in the detection-statistic section:
the sigma-independence limit of Eq. 2, and "so the trials factor is the star's" ->
"so each null realisation carries the same trials factor as the measurement at the star".
Three long sentences split, one repeated channel-width range deleted (it is in Table 2).

## 2. Final state of the prose sweep (2026-09-12)

    gate.sh     : 29 pages | 0 errors | 0 undef refs/cites | 0 multdef | 0 overfull |
                  0 underfull | 0 Type 3
    pagesplit.py: main 20.45  back matter 1.05  appendices 6.93  bib 0.31 = 28.75
    abstract    : 1907 / 1920 rendered characters, UNCHANGED (not touched: its three
                  antithesis forms are the protected honest-core caveat and two compact
                  scope statements, and there were only 13 characters of headroom)
    arxivset.sh : 29 items (22 tex/cls/sty + 7 figures) from an empty directory,
                  29 pages, every gate 0, 0 missing files, 1.6 MB.
                  ARXIV_UPLOAD.md updated: it still said v3.45 / 27 items, while the
                  v3.46 preamble adds survey_numbers_pointing.tex and
                  survey_numbers_bprec.tex.

### Prose constructions, before -> after (prosecount.py, same script both sides)

    construction            main            appendices       total
    , not                   27 ->  8        12 -> 5          39 -> 13
    and not                  5 ->  2         1 -> 1           6 ->  3
    rather than             13 ->  6         3 -> 0          16 ->  6
    A total (antithesis)    45 -> 16        16 -> 6          61 -> 22   (-64 %)
    colon-explainer        114 -> 79        35 -> 34        149 -> 113
    em-dash in source        0 ->  0         0 -> 0           0 ->  0
    spaced " -- "           11 -> 11         1 -> 1          12 -> 12  (comments/CRediT)

The 6 surviving main-text "rather than" and 8 ", not" are kept deliberately: the
STANDING_RULES honest-core sentence (abstract and Introduction), the Scope-box
precision clauses (ii) and (v), the Airy-coefficient-versus-FWHM identification, the
crossing-channel-versus-window-centre identifications, and the Cataldi v_bary honesty
clause. Each is a definitional or protected caveat rather than the tic.

PDF em-dash glyphs: 7, all of them the class file's `Fig. N.—` caption separator.
En-dashes: 149, all numeric ranges.

### Widows

`widows.py` at the 22 per cent threshold: **23 -> 9** paragraphs. Of the 9 remaining,
two are display-maths fragments the detector mistakes for text (a lone root sign, and
an `Neff = pi(r2 - r2)` tail) and four are in the appendices. Killing widows, not
deleting sentences, is where most of the page came from: net word change is only
**-83 words in the main text** for **-0.33 pages**, because removing two words from a
paragraph whose last line carries two words removes a whole line.

### Word diff (worddiff.py)

    region        old     new   deleted  inserted    net
    main        18791   18708       966       883     -83
    appendices   5480    5471        45        36      -9
    whole       24271   24179      1011       919     -92

### Content invariance, checked rather than asserted

- **Citations: identical multiset**, 0 keys removed, 0 added (all `\cite*` forms).
- **Numbers**: 4 literals removed, 0 added, and all four are repeats or pointers:
  `15.3` and `31.25` (the channel-width range, still in Table 2 and in the Class A/B
  definitions) and the `1`, `3` of a deleted "reproducibility reference for steps 1--3".
- **Macros**: `\ChanMedianMHz` and `\NCtrl` each lost one call site and are still used
  (1 and 41 times). `macrosweep.py` reports **98 unused macros before and after**, so
  no macro was orphaned by this pass. All 98 live in `survey_numbers_round15.tex`,
  which the manuscript does not `\input` (see the concurrency note below).
- Acronyms spelled at first use: **QA2** ("ALMA's second-stage quality assurance"),
  **SEFD** ("system equivalent flux density"), **MOUS** ("member observing unit sets"),
  **TDM** ("time-division mode").

### Two things for the authors, found here and not fixed here

1. **A content defect in the new beta Pic recurrence-control paragraph**, reported
   independently by the two sibling runs in `AAA_READ_ME_CORRECTIONS.md` item 3 and
   `AAA_READ_ME_EVIDENCE_run3.md`: the re-searched Band 6 window is 230.528 GHz
   (T* = 10.16), which is a crossing and not the stage-1 row of `tab:flagged`
   (230.516 GHz, T* = 11.68). The text and Table 5 cannot both be describing one
   window. This pass tightened that paragraph's wording only and changed no number,
   so the defect is untouched and still live.
2. **Concurrency**: two other runs on the same v3.46 task share this folder. They have
   backed off the `.tex`, `make_all.sh`, `BUILD_NOTES.md` and the generators, and left
   their findings in `AAA_READ_ME_CORRECTIONS.md`, `AAA_READ_ME_EVIDENCE_run3.md`,
   `VERIFICATION_NOTES_astra-pa.md` and `DRAFT_TEXT_astra-pa.md`. One trace of the
   overlap is visible here: `\input{survey_numbers_round15}` was present in the
   preamble at 06:40:15 and gone by 06:40:30, so those 98 macros are generated but
   unwired. Nothing in this pass depends on them.

Snapshots: `.snap_prose_start.tex` / `.pdf` (incoming, 30 pages) and `.snap_29pp.tex`
(first build at 29 pages). **Not pushed, per the brief.**

# BUILD_NOTES — v3.46 VERIFICATION AND CORRECTIONS PASS

Third run in this folder, sequenced after the prose/trim run per
`/shared/ASTRA/reviews/v3.46_MANDATORY_CORRECTIONS.md` ("one writer at a time").
Incoming state: 29 pages, main 20.45, all gates 0, abstract 1907/1920.
Snapshot of the incoming file: `.snap_verify_start.tex`.

## What this pass was for

The numbers the brief supplied for the two new results had not been checked
against the products. Three of them did not reproduce, and one supported a
claim that was false. This pass verified them, corrected the manuscript, and
added the two referee-requested measurements that were still outstanding.

## Corrections applied

1. **The beta Pic recurrence paragraph, rewritten.** It said "the two beta Pic
   windows attributed to circumstellar CO were re-searched" and gave 9.95
   against 10.16 for Band 6. The Band 6 window re-searched is 230.528134 GHz in
   `uid://A002/X5a9a13/X58b`, a crossing; `tab:flagged`'s Band 6 row is
   230.516128 GHz in `uid://A001/X133d/Xbb5` at T* = 11.68, and no second block
   of it exists in the archive. The text contradicted the paper's own Table 5.
   It now names both windows explicitly and says which is a stage-1 outlier.
2. **0.34 km/s -> the products.** `\BpRecThreeDv{0.34}` came from differencing
   against the table's rounded 115.2605 GHz. The frequency comparison is now
   made after removing each block's own tuning, which is what ALMA sets per
   date: **exactly 1.00 channel in Band 3 and 3.00 in Band 6**, verified from
   `freq_lo` and `star_peak_freq` in the result files. The barycentric argument
   the old text leaned on is not valid (the tuning has already absorbed that
   term) and is replaced by a frame-free statement: the CO peaks of four blocks,
   two transitions, nine years apart, all lie within 0.7 km/s of beta Pic's
   systemic velocity. This reproduces `/shared/ASTRA/reviews/v3.46_evidence_bpic.md`
   independently.
3. **A third Band 3 block, which landed at 06:35 UTC and no one had.**
   `A002_Xf5d76d_Xe19`: T* = 27.68, 24 channels above threshold, 0 of 512
   controls above the star, and its peak one channel from the published block
   after the tuning correction. The B3 control is now three blocks, not two.
4. **The retry programme.** The brief said 0 successes in 38 attempts. The
   processing log says **39 attempts, 1 success, 38 failures**; the success is
   AU Mic [B9], outside Bands 3-8 and outside this release. The exclusions
   section now states the verified form.
5. **The pointing macros.** `pointing_calc.py` pooled every candidate unit of
   every failed target-band, including the eight that do point at the star,
   giving a median of 1.4 deg and a maximum of 8777". Restricted to the 60
   never-pointed entries, one number each, being the nearest field centre:
   **250" to 8205", median 1.6 deg**, which is what the audit document reports.
6. **The denominator.** 53 of the 168 candidate stars fail on pointing in every
   band, so the searched sample is 88 of about **115** genuinely covered stars,
   not 88 of 168. Verified by matching all 54 never-pointed stars to census
   entries by designation: exactly one of them, Wolf 28, is also in the searched
   88 through another band.
7. **The Conclusions still said "retired as a noise excursion"** (referee A12,
   brief 2.9). Replaced with the mandated wording. The Results section had
   already been fixed; the Conclusions had not.
8. **The statistic-revision chronology (brief 2.15, referee B1).** The old text
   implied the revision preceded inspection of the flag. The repository says
   otherwise: the AU Mic flag is first committed 2026-08-31T11:55:04Z
   (`8e00f90e8f8c`, stated in that version's abstract, verified by fetching the
   file), and the symmetric statistic becomes operative 2026-09-09T16:14:07Z
   (`0c465f2661bd`). The paper now says the redesign postdates the flag by nine
   days and lets the algebra carry the weight. The CP-72 2713 retire criterion
   is cited the same way: `119a68a6ab50`, 9 hours before the second block was
   searched.
9. **The coarse-noise defect (brief 2.17, referee B4).** The subsection no
   longer says the failure mode is unidentified. All six windows are 12 m,
   three in Band 6 and three in Band 7, all 15.6 MHz, in 5 execution blocks
   across 4 projects, and **every one has a finer-channelised window in the same
   block covering the same frequencies that behaves normally** (verified here
   from the frozen export, q ratios 2.9e3 to 6.3e3). The position-independence
   question the appendix left open is settled from the pipeline source: `sigma`
   is `(nint, nch)`, estimated from the control probes and applied to every
   position alike. And the residual test the referee asked for: predicting q
   from each window's band, array and antenna count, the 431 retained windows
   are unimodal, 98.4 per cent inside half a decade of the median, interquantile
   spread a factor 2.3, no internal gap wider than 0.04 dex, with the six
   excluded windows 3.0 dex below the lowest retained one.

## Paid for by

`tab:nomenclature` lost two rows (brief section 3 asks for it to be shrunk);
both are stated in full in the boxed reading rule immediately above it. The
older beta Pic validation paragraph lost its check-list restatement, now
carried by the recurrence result. The CP-72 subsection lost a trials-budget
sentence duplicated in section 3 and one rhetorical closer. Net: 29 pages held,
main 20.45 -> 20.70.

## Hygiene

- `survey_numbers_bprec.tex` and `recurrence_control_calc.py` are **withdrawn**
  to `.superseded/`: every macro in that file was unreferenced after the
  rewrite, and one was wrong. `ARXIV_UPLOAD.md` records the withdrawal.
- `pointing_calc.py`, `recurrence_control_calc.py` and `v346_calc.py` were not
  in `make_all.sh`, so a clean regeneration would not have reproduced their
  macro files. The two that survive are now wired in.
- **Clean-regeneration test run**: every generated `survey_numbers*.tex` and
  `tab_*.tex` deleted, `make_all.sh` re-run, rebuild identical, and the
  regenerated files diff clean against the backup apart from the
  retired-macro comment lines.
- `macrosweep.py`: **0 unused macros** after `retire_macros.py`.
- `arxivset.sh` from an empty directory: **29 items, 29 pages, every gate 0**.

## Four referee items the prose run had not reached, done here

Checked rather than assumed, by grepping for the wording each referee asked for:
Figure 1's caption now says the panels are to be read together and that a lower
EIRP there does not imply greater sensitivity to a hertz-wide carrier (A17);
the mask discussion now states that a deliberate transmitter could sit on a
molecular transition, so those channels are searched but intrinsically ambiguous
(A13); the first false-alarm component now describes the control ensemble as an
empirical null conditional on approximate spatial exchangeability rather than a
local false-alarm probability (A10); and the appendix carrying the development
history is headed **Analysis audit trail**, with the validation section opening
"What follows is the final analysis" and pointing to it (brief section 5).

## Final measurement

    gate.sh     : 29 pages | 0 errors | 0 undef | 0 multdef | 0 overfull | 0 underfull | 0 Type3
    pagesplit   : main 20.75  back 1.05  appendices 6.88  bib 0.31  = 28.99 content pages
    abstract    : 1904 / 1920 rendered characters
    macrosweep  : 586 macros defined, 0 unused
    arxivset.sh : 29 items from an empty directory, 29 pages, 0 missing files, 0 Type 3, 1.6 MB
    prosecount  : A total main 18, app 6, 24 | em-dash 0 | negative definition 2
    worddiff    : main +312 net (672 inserted, 360 deleted), appendices -48, whole +264

The last page was bought back twice: the first time by dropping two rows from
`tab:nomenclature` that the boxed reading rule already states in full, the
second by setting `tab:occurrence` in `\footnotesize` and trimming its caption
and the thrice-stated "illustrative only" opener. The main-text measure is
float-quantised and did not respond to several small prose cuts, so the cuts
that counted were the ones landing on the last two pages.

## Still open, and not this pass's to close

- Brief section 3, the vocabulary replacement ("lane" -> search branch, and the
  rest): **not done**. "lane" still occurs 46 times. The nomenclature table has
  been shrunk but the terms have not been replaced.
- Main text is 20.75 against the author's 20.45. The additions above are all
  referee-requested; the remaining blocks of the right size are `fig:cp72ctrl`
  (protected) and `tab:algorithm` (no referee asked).
- The author TODO markers are untouched, as instructed.

**Not pushed, per the brief.**
